# FragmentDock

./: .gitignore  README.md  pyproject.toml  restretto_6d_full_rotation_execution_flow.md  restretto_chemistry_flow.md  restretto_combined_reimplementation_flow.md  restretto_engineering_flow.md  restretto_implementation.md  testdata_run.in
restretto/: __init__.py  cli.py  config.py  constants.py  decompose.py  docking_full_rotation.py  energy.py  fragment_grid.py  fragment_grid_6d.py  geometry.py  grid.py  io.py  model.py  optimizer.py  rotation.py
testdata/: 2HU4_A_r.pdbqt  G39_docked_python.sdf  G39_docked_python.sdffraggrid__04_14_18_24_42.csv  score_only_python.txt
testdata/grid/: Br_H.grid  C_H.grid  C_P.grid  Cl_H.grid  F_H.grid  I_H.grid  Met_D.grid  N_A.grid  N_DC.grid  O_D.grid  O_DA.grid  S_P.grid
testdata/testdata/grid/: Dummy.grid  N_DA.grid  N_P.grid  O_A.grid  O_P.grid  P_P.grid
tests/: test_config.py  test_cpp_parity.py  test_fragment_grid_cpp.py  test_full_rotation.py  test_geometry_model.py  test_grid_energy.py  test_io_cli_e2e.py  test_optimizer.py
